--- a/CarDealership/View/CustomerPage.xaml
+++ b/CarDealership/View/CustomerPage.xaml
@@ -66,25 +66,19 @@
             <SplitView.Content>
                 <Grid>
                     <Grid.DataContext>
-                        <viewModel:RegisterCarViewModel/>
+                        <viewModel:CustomerViewModel/>
                     </Grid.DataContext>
 
                     <!--DataGrid-->
                     <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" Margin="315,103,315,97">
-                        <controls:DataGrid ItemsSource="{Binding C}" x:Name="DataGrid" 
-                   SelectionMode="Single" SelectedItem="{Binding SelectedCar, Mode=TwoWay}" DefaultOrderIndex="1" Height="380" Width="600" Margin="0,0,-3,0" controls:DataGridExtensions.UseSingleSelectionAndDeselection="true">
+                        <controls:DataGrid ItemsSource="{Binding CustomerCollection}" x:Name="DataGrid" 
+                   SelectionMode="Single" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" DefaultOrderIndex="1" Height="380" Width="600" Margin="0,0,-3,0" controls:DataGridExtensions.UseSingleSelectionAndDeselection="true">
                             <!--Here u can put the header-->
                             <controls:DataGrid.Columns>
-                                <controls:DataGridTextColumn Width="200" Header="ID" 
-                  Binding="{Binding ID}"/>
-                                <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
-                  IsAscendingDefault="False">
-                                    <controls:DataGridTextColumn.Header>
-                                        <TextBlock Text="Brand" Foreground="Green" />
-                                    </controls:DataGridTextColumn.Header>
-                                </controls:DataGridTextColumn>
                                 <controls:DataGridTextColumn Width="200" Header="Name" 
-                  Binding="{Binding Name}" />
+                  Binding="{Binding Name}"/>
+                                <controls:DataGridTextColumn Width="200" Header="CPR" 
+                  Binding="{Binding Cpr}" />
                             </controls:DataGrid.Columns>
 
                             <controls:DataGrid.ItemDetailsTemplate>
@@ -98,24 +92,21 @@
                                         <StackPanel HorizontalAlignment="Left" Grid.Column="0">
                                             <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
                                             <StackPanel Orientation="Horizontal">
-                                                <TextBlock Text="Color:" Width="50"/>
-                                                <TextBlock Text="{Binding Color}" Width="100"/>
+                                                <TextBlock Text="Address:" Width="50"/>
+                                                <TextBlock Text="{Binding Adress}" Width="100" />
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal">
-                                                <TextBlock Text="Year:" Width="50"/>
-                                                <TextBlock Text="{Binding Year}" Width="100" />
+                                                <TextBlock Text="Age:" Width="80"/>
+                                                <TextBlock Text="{Binding Age}" Width="200"/>
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal">
-                                                <TextBlock Text="Price:" Width="80"/>
-                                                <TextBlock Text="{Binding Price}" Width="200"/>
+                                                <TextBlock Text="Licence:" Width="80"/>
+                                                <TextBlock Text="{Binding License}" Width="200"/>
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal">
-                                                <TextBlock Text="Comment:" Width="80"/>
-                                                <TextBlock Text="{Binding Comment}" Width="200"/>
+                                                <TextBlock Text="Phone:" Width="80"/>
+                                                <TextBlock Text="{Binding Phonenumber}" Width="200"/>
                                             </StackPanel>
-                                        </StackPanel>
-                                        <StackPanel HorizontalAlignment="Right" Grid.Column="1">
-                                            <Image Source="{Binding ImagePath}" Width="100" Height="100"/>
                                         </StackPanel>
                                     </Grid>
                                 </DataTemplate>
@@ -126,27 +117,24 @@
                         <StackPanel>
                             <StackPanel Height="45" Orientation="Horizontal" Margin="7,0" HorizontalAlignment="Center">
                                 <StackPanel VerticalAlignment="Center" Width="160">
-                                    <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Brand"/>
-                                </StackPanel>
-                                <StackPanel VerticalAlignment="Center" Width="160">
                                     <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Name"/>
                                 </StackPanel>
                                 <StackPanel VerticalAlignment="Center" Width="160">
-                                    <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" PlaceholderText="Year" Margin="0,7,0,6"/>
+                                    <TextBox Text="{Binding Age, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Age"/>
+                                </StackPanel>
+                                <StackPanel VerticalAlignment="Center" Width="160">
+                                    <TextBox Text="{Binding Cpr, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" PlaceholderText="CPR-Number" Margin="0,7,0,6"/>
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Height="45" Orientation="Horizontal" Margin="7,0" HorizontalAlignment="Center">
                                 <StackPanel VerticalAlignment="Center" Width="160">
-                                    <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Color"/>
+                                    <TextBox Text="{Binding Adress, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Address"/>
                                 </StackPanel>
                                 <StackPanel VerticalAlignment="Center" Width="160">
-                                    <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Price"/>
+                                    <TextBox Text="{Binding Phonenumber, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Phone"/>
                                 </StackPanel>
                                 <StackPanel VerticalAlignment="Center" Width="160">
-                                    <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Comment"/>
-                                </StackPanel>
-                                <StackPanel VerticalAlignment="Center">
-                                    <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="100" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image" />
+                                    <TextBox Text="{Binding License, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" PlaceholderText="Licence" Margin="0,7,0,6"/>
                                 </StackPanel>
                             </StackPanel>
                         </StackPanel>
@@ -158,11 +146,9 @@
 
                     <!--AppBar-Begin-->
                     <StackPanel Orientation="Horizontal" Margin="315,0,0,40" Height="50" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                        <AppBarButton Icon = "Add" Command="{Binding AddCar}"/>
+                        <AppBarButton Icon = "Add" Command="{Binding AddCustomerCommand}"/>
                         <AppBarSeparator/>
-                        <AppBarButton Icon = "Delete" Command="{Binding DeleteCar}"/>
-                        <AppBarSeparator/>
-                        <AppBarButton Icon = "Shop" Command="{Binding CreateInvoiceWithSelectedCar}"/>
+                        <AppBarButton Icon = "Delete" Command="{Binding DeleteCustomerCommand}"/>
                     </StackPanel>
                     <!--AppBar-End-->
 
