--- a/CarDealership/View/RegisterCarPage.xaml
+++ b/CarDealership/View/RegisterCarPage.xaml
@@ -72,8 +72,8 @@
                     </Grid.DataContext>
 
                     <!--DataGrid-->
-                    <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" Margin="315,103,315,97">
-                        <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="DataGrid" 
+                    <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="DataGrid" HorizontalAlignment="Center"
                    SelectionMode="Single" SelectedItem="{Binding SelectedCar, Mode=TwoWay}" DefaultOrderIndex="1" Height="380" Width="600" Margin="0,0,-3,0" controls:DataGridExtensions.UseSingleSelectionAndDeselection="true">
                             <!--Here u can put the header-->
                             <controls:DataGrid.Columns>
