--- a/CarDealership/View/CustomerPage.xaml
+++ b/CarDealership/View/CustomerPage.xaml
@@ -105,7 +105,7 @@
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal">
                                                 <TextBlock Text="Phone:" Width="60"/>
-                                                <TextBlock Text="{Binding Phonenumber}" Width="200"/>
+                                                <TextBlock Text="{Binding PhoneNumber}" Width="200"/>
                                             </StackPanel>
                                         </StackPanel>
                                     </Grid>
@@ -131,7 +131,7 @@
                                     <TextBox Text="{Binding Adress, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Address"/>
                                 </StackPanel>
                                 <StackPanel VerticalAlignment="Center" Width="160">
-                                    <TextBox Text="{Binding Phonenumber, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Phone"/>
+                                    <TextBox Text="{Binding PhoneNumber, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" PlaceholderText="Phone"/>
                                 </StackPanel>
                                 <StackPanel VerticalAlignment="Center" Width="160">
                                     <TextBox Text="{Binding License, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" PlaceholderText="Licence" Margin="0,7,0,6"/>
@@ -154,7 +154,7 @@
 
                     <!--FilterCar-Begin-->
                     <StackPanel HorizontalAlignment="Center" Height="90" Width="600" Margin="317,11,313,0" VerticalAlignment="Top" Orientation="Horizontal">
-                        <TextBox PlaceholderText="Find Car" Width="600" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}" Margin="0,0,0,2"/>
+                        <TextBox PlaceholderText="Find Customer" Width="600" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}" Margin="0,0,0,2"/>
                         <!--<Button x:Name="Search" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="32" Width="100" Background="#32BEA6"/>-->
                     </StackPanel>
                     <!--FilterCar-End-->
