--- a/CarDealership/View/CustomerPage.xaml
+++ b/CarDealership/View/CustomerPage.xaml
@@ -70,7 +70,7 @@
                     </Grid.DataContext>
 
                     <!--DataGrid-->
-                    <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" Margin="315,103,315,97">
+                    <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <controls:DataGrid ItemsSource="{Binding CustomerCollection}" x:Name="DataGrid" 
                    SelectionMode="Single" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" DefaultOrderIndex="1" Height="380" Width="600" Margin="0,0,-3,0" controls:DataGridExtensions.UseSingleSelectionAndDeselection="true">
                             <!--Here u can put the header-->
